2013-09-19  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * utils/check.sh
        added colors to Success/Failed output from "make check"

        * scripts/internal/generate-html-contents.pl 
        a flag can now be set to get an alphabetically ordered
        output (currently set to false, i.e. same output as before)

2013-09-19  Gregory Soyez  <soyez@fastjet.fr>

	* Makefile.in:
	* utils/check.sh:
	instead of having "make check" exit with an error whenever a test
	fails, let it keep going and print a summary of what has failed
	and succeded at the end of everything

2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* contribs.svn:
	switched SubjetCounting to version 1.0.1

	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.1
        and bugfix for exclusion and inclusion of more than one contrib


2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.0
        and bugfix for exclusion and inclusion of more than one contrib
        (not actually released as a tarball, see entry above)        

	* contribs.svn:
	added SubjetCounting 1.0.0

2013-08-28  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * configure
          fixed two bugs that were preventing specifying more than
          one contrib with the --only and --exclude options. The issues
          were a spurious "/" appearing in the replacement of commas with
          blanks in the contribs list, and a non-escaped command-line
          passed through sed when writing out the Makefile.

2013-08-27  Gregory Soyez  <soyez@fastjet.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.006 including Nsubjettiness 1.0.3

	* contribs.svn:
	switched NSubjetiness to version 1.0.3

2013-08-13  Gavin Salam  <gavin.salam@cern.ch>

	* configure: 
	identification of svn info fixed to work also with svn 1.8 (that
	version prints an absolute and relative URL, and configure was